--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,5 +6,5 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <div id="app" class="app"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUimB4-PZ_y2N96diVv7i95xPIsayoF3E"></script>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAUimB4-PZ_y2N96diVv7i95xPIsayoF3E"></script>
 <script src="./js/main.js"></script>
