--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,3 +8,13 @@
 <div id="app" class="app"></div>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAUimB4-PZ_y2N96diVv7i95xPIsayoF3E"></script>
 <script src="./js/main.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68186336-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
